# simple-gl

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/opengl/: CMakeLists.txt
dependencies/sdl2/: CMakeLists.txt
src/: .clang-format  CMakeLists.txt  Game.cpp  Game.h  main.cpp
